# pytensor

./: pyproject.toml  setup.cfg
pytensor/: __init__.py  ifelse.py
pytensor/graph/: basic.py  utils.py
pytensor/link/numba/dispatch/: __init__.py  basic.py  elemwise.py  extra_ops.py  nlinalg.py  scalar.py  scan.py
pytensor/scan/: op.py  rewriting.py
tests/graph/: test_basic.py  test_utils.py
tests/link/numba/: test_basic.py
